--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "demo:dev": "pnpm --filter demo run dev",
     "demo:build": "pnpm --filter demo un build",
     "demo:serve": "pnpm --filter demo un serve",
-    "ci:version": "pnpm changeset version && pnpm --filter \"@use-gesture/*\" install --lockfile-only",
+    "ci:version": "pnpm changeset version && pnpm --filter \"leva\" --filter \"@leva-ui/*\" install --lockfile-only",
     "ci:publish": "pnpm build && pnpm changeset publish",
     "prepare": "husky install",
     "prettier": "prettier --check ."
@@ -65,6 +65,7 @@
     "@storybook/addon-links": "^6.5.13",
     "@storybook/addon-storysource": "^6.5.13",
     "@storybook/react": "^6.5.13",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -87,7 +88,7 @@
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.25.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "bracketSameLine": true,
