--- a/packages/plugin-plot/package.json
+++ b/packages/plugin-plot/package.json
@@ -12,11 +12,14 @@
   },
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
-    "@use-gesture/react": "^10.0.0",
     "leva": ">=0.9.15",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.2.23",
     "mathjs": "^11.4.0"
+  },
+  "devDependencies": {
+    "leva": ">=0.9.15"
   }
 }
