chore: it sucks but preconstruct doesn't build without flat deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["packages/*/src/**/*"],
   "compilerOptions": {
+    "declaration": false,
     "target": "ES5",
     "module": "ESNext",
     "lib": ["DOM", "ESNext"],
