ts: fix react generation?

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ES5",
     "module": "ESNext",
     "lib": ["DOM", "ESNext"],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "noEmit": true,
     "downlevelIteration": true,
     "strict": true,
