--- a/packages/plugin-plot/package.json
+++ b/packages/plugin-plot/package.json
@@ -16,7 +16,7 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@use-gesture/react": "^10.2.23",
+    "@use-gesture/react": "10.2.22",
     "mathjs": "^11.4.0"
   },
   "devDependencies": {
