--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
   },
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -70,15 +70,15 @@
     "@emotion/react": "^11.7.1",
     "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
-    "@size-limit/preset-big-lib": "^8.1.0",
+    "@size-limit/preset-big-lib": "^11.0.0",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
     "@storybook/addon-storysource": "^6.4.18",
     "@storybook/react": "^6.4.18",
     "@testing-library/cypress": "^8.0.2",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "all-contributors-cli": "^6.20.0",
@@ -97,8 +97,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
     "tsd": "^0.19.1",
