--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -22,8 +22,8 @@
     "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-portal": "1.0.2",
-    "@radix-ui/react-tooltip": "1.0.5",
+    "@radix-ui/react-portal": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stitches/react": "^1.2.8",
     "@use-gesture/react": "^10.2.5",
     "colord": "^2.9.2",
