--- a/demo/package.json
+++ b/demo/package.json
@@ -16,6 +16,7 @@
     "noisejs": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-reconciler": "^0.32.0",
     "react-use": "^17.3.2",
     "three": "^0.143.0",
     "wouter": "^2.7.5"
@@ -23,8 +24,8 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.5.5",
-    "vite": "2.7.13"
+    "@vitejs/plugin-react": "^5.0.2",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5"
   }
 }
