--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "yarn build && size-limit",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --quiet",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build --quiet",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "yarn workspace demo dev",
@@ -71,19 +71,20 @@
     "@preconstruct/cli": "^2.1.5",
     "@radix-ui/react-icons": "^1.0.3",
     "@size-limit/preset-big-lib": "^11.0.0",
-    "@storybook/addon-actions": "^6.4.18",
-    "@storybook/addon-essentials": "^6.4.18",
-    "@storybook/addon-links": "^6.4.18",
-    "@storybook/addon-storysource": "^6.4.18",
-    "@storybook/react": "^6.4.18",
+    "@storybook/addon-docs": "9.1.5",
+    "@storybook/addon-links": "^9.1.5",
+    "@storybook/react": "^9.1.5",
+    "@storybook/react-vite": "^9.1.5",
     "@testing-library/cypress": "^8.0.2",
+    "@types/node": "^24.3.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "all-contributors-cli": "^6.20.0",
     "babel-eslint": "^10.1.0",
-    "cypress": "6.9.1",
+    "better-opn": "^3.0.2",
+    "cypress": "^15.2.0",
     "eslint": "^8.8.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -92,6 +93,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "9.1.5",
     "husky": "^7.0.4",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
@@ -101,8 +103,10 @@
     "react-dom": "^18.0.0",
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.14.0",
+    "storybook": "^9.1.5",
+    "tiny-invariant": "^1.3.3",
     "tsd": "^0.19.1",
-    "typescript": "4.5.5"
+    "typescript": "^5.9.2"
   },
   "prettier": {
     "bracketSameLine": true,
