feat(headless): add headless mode entry point and wrapper hooks

--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -14,7 +14,8 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "plugin/index.ts"
+      "plugin/index.ts",
+      "headless/index.ts"
     ]
   },
   "peerDependencies": {
