feat: enable installation from GitHub for monorepo packages
This change allows Leva and its plugins to be installed directly from GitHub
using pnpm. This is useful for testing unreleased features or using forked
versions before PRs are merged.

The implementation uses lifecycle event detection and path-based patterns to
identify git installations and automatically build production artifacts during
installation. This ensures consumers receive fully built packages without
requiring local development dependencies.

Changes:
- Add postinstall script with git install detection via lifecycle events
- Add prepare scripts to root and all packages for publish/git install support
- Support pnpm's store tmp directory pattern for reliable detection
- Enable git installation for all plugin packages (spring, dates, bezier, plot)
- Skip builds appropriately for sub-dependencies and local development

Installation example:
pnpm add "leva@github:user/leva#branch&path:/packages/leva"

--- a/packages/leva/package.json
+++ b/packages/leva/package.json
@@ -4,6 +4,14 @@
   "main": "dist/leva.cjs.js",
   "module": "dist/leva.esm.js",
   "types": "dist/leva.cjs.d.ts",
+  "files": [
+    "dist",
+    "src",
+    "plugin"
+  ],
+  "scripts": {
+    "prepare": "node ../../scripts/prepare-package.js"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
