--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -4,6 +4,13 @@
   "main": "dist/leva-ui-plugin-spring.cjs.js",
   "module": "dist/leva-ui-plugin-spring.esm.js",
   "types": "dist/leva-ui-plugin-spring.cjs.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "prepare": "node ../../scripts/prepare-package.js"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
