--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         id: yarn-build-cache
         with:
           path: packages/**/dist
-          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/**') }}
+          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
           restore-keys: |
             ${{ runner.os }}-yarn-build-
 
