--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,17 +49,18 @@ jobs:
       - name: Lint files
         run: yarn lint:full
 
-      - name: Cache Yarn build output
-        uses: actions/cache@v3
-        id: yarn-build-cache
-        with:
-          path: packages/**/dist
-          key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-build-
+      # TODO: this was blocking release #539
+      # - name: Cache Yarn build output
+      #   uses: actions/cache@v3
+      #   id: yarn-build-cache
+      #   with:
+      #     path: packages/**/dist
+      #     key: ${{ runner.os }}-yarn-build-${{ hashFiles('packages/') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-yarn-build-
 
       - name: Yarn build (if no cache hit)
-        if: steps.yarn-build-cache.outputs.cache-hit != 'true'
+        # if: steps.yarn-build-cache.outputs.cache-hit != 'true'
         run: yarn build
 
       - name: Cypress run
