--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,28 +25,25 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> "$GITHUB_OUTPUT"
-
-      - name: Cache Yarn dependencies
+      - name: Cache pnpm modules
         uses: actions/cache@v3
-        id: yarn-cache
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-pnpm-
 
-      - name: Install dependencies
-        run: yarn install --silent
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7.25.0
+          run_install: true
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
-          version: yarn ci:version
-          publish: yarn ci:release
+          version: pnpm ci:version
+          publish: pnpm ci:publish
           commit: 'chore(release): update monorepo packages versions'
           title: 'Upcoming Release Changes'
         env:
