--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 // prettier-ignore
 {
   "include": ["packages/*/src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "ES5"                           /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
     "module": "ESNext"                        /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
