--- a/packages/plugin-bezier/package.json
+++ b/packages/plugin-bezier/package.json
@@ -21,6 +21,7 @@
     "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
-    "@use-gesture/react": "^10.0.0"
+    "@use-gesture/react": "^10.0.0",
+    "leva": "workspace:*"
   }
 }
