--- a/packages/plugin-plot/package.json
+++ b/packages/plugin-plot/package.json
@@ -19,5 +19,9 @@
   },
   "dependencies": {
     "mathjs": "^10.1.1"
+  },
+  "devDependencies": {
+    "@use-gesture/react": "^10.0.0",
+    "leva": "workspace:*"
   }
 }
