--- a/packages/plugin-spring/package.json
+++ b/packages/plugin-spring/package.json
@@ -21,6 +21,7 @@
     "@react-spring/web": "9.4.2"
   },
   "devDependencies": {
-    "@use-gesture/react": "^10.0.0"
+    "@use-gesture/react": "^10.0.0",
+    "leva": "workspace:*"
   }
 }
