--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["react-app", "plugin:storybook/recommended"],
+  "extends": ["react-app"],
   "rules": {
     "no-console": "warn"
   },
