chore: storybook update (#563)

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "validate": "preconstruct validate",
     "tsc": "tsc --noEmit",
     "size": "size-limit",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --quiet",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build --quiet",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "pnpm --filter demo run dev",
@@ -62,11 +62,11 @@
     "@preconstruct/cli": "^2.3.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@size-limit/preset-big-lib": "^8.1.0",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addon-storysource": "^6.5.15",
-    "@storybook/react": "^6.5.15",
+    "@stitches/react": "^1.2.8",
+    "@storybook/addon-docs": "10.0.2",
+    "@storybook/addon-links": "^10.0.2",
+    "@storybook/react": "^10.0.2",
+    "@storybook/react-webpack5": "^10.0.2",
     "@testing-library/cypress": "^8.0.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
@@ -75,6 +75,7 @@
     "@typescript-eslint/parser": "^5.48.2",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.24.0",
+    "babel-loader": "^10.0.0",
     "cypress": "6.9.1",
     "eslint": "^8.32.0",
     "eslint-config-react-app": "^7.0.1",
@@ -84,6 +85,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "10.0.2",
     "husky": "^8.0.3",
     "pnpm": "^7.25.0",
     "prettier": "^2.8.3",
@@ -92,6 +94,7 @@
     "react-dom": "^18.2.0",
     "size-limit": "^8.1.0",
     "start-server-and-test": "^1.15.2",
+    "storybook": "^10.0.2",
     "tsd": "^0.25.0",
     "typescript": "^5.7.2"
   },
