--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "size": "size-limit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build --quiet",
+    "test-storybook": "vitest --project=storybook",
+    "test-storybook:ui": "vitest --project=storybook --ui",
+    "test-storybook:watch": "vitest --project=storybook --watch",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "pnpm --filter demo run dev",
@@ -65,14 +68,22 @@
     "@stitches/react": "^1.2.8",
     "@storybook/addon-docs": "10.0.2",
     "@storybook/addon-links": "^10.0.2",
+    "@storybook/addon-vitest": "^10.0.2",
     "@storybook/react": "^10.0.2",
     "@storybook/react-webpack5": "^10.0.2",
+    "@storybook/test": "^8.6.14",
     "@testing-library/cypress": "^8.0.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@vitest/browser": "^4.0.6",
+    "@vitest/ui": "^4.0.6",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.24.0",
     "babel-loader": "^10.0.0",
@@ -87,6 +98,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "10.0.2",
     "husky": "^8.0.3",
+    "playwright": "^1.56.1",
+    "playwright-core": "^1.56.1",
     "pnpm": "^7.25.0",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
@@ -96,7 +109,8 @@
     "start-server-and-test": "^1.15.2",
     "storybook": "^10.0.2",
     "tsd": "^0.25.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^4.0.6"
   },
   "prettier": {
     "bracketSameLine": true,
