--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "size": "size-limit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build --quiet",
-    "test-storybook": "vitest --project=storybook",
-    "test-storybook:ui": "vitest --project=storybook --ui",
-    "test-storybook:watch": "vitest --project=storybook --watch",
+    "test-storybook": "vitest",
+    "test-storybook:ui": "vitest --ui",
+    "test-storybook:watch": "vitest --watch",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "pnpm --filter demo run dev",
@@ -83,6 +83,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vitest/browser": "^4.0.6",
+    "@vitest/browser-playwright": "^4.0.6",
     "@vitest/ui": "^4.0.6",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.24.0",
