--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "size": "size-limit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build --quiet",
-    "test-storybook": "vitest",
-    "test-storybook:ui": "vitest --ui",
-    "test-storybook:watch": "vitest --watch",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "pnpm --filter demo run dev",
@@ -68,7 +65,6 @@
     "@stitches/react": "^1.2.8",
     "@storybook/addon-docs": "10.0.2",
     "@storybook/addon-links": "^10.0.2",
-    "@storybook/addon-vitest": "^10.0.2",
     "@storybook/react": "^10.0.2",
     "@storybook/react-webpack5": "^10.0.2",
     "@storybook/test": "^8.6.14",
@@ -82,9 +78,6 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "@vitest/browser": "^4.0.6",
-    "@vitest/browser-playwright": "^4.0.6",
-    "@vitest/ui": "^4.0.6",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.24.0",
     "babel-loader": "^10.0.0",
@@ -110,8 +103,7 @@
     "start-server-and-test": "^1.15.2",
     "storybook": "^10.0.2",
     "tsd": "^0.25.0",
-    "typescript": "^5.7.2",
-    "vitest": "^4.0.6"
+    "typescript": "^5.7.2"
   },
   "prettier": {
     "bracketSameLine": true,
