--- a/package.json
+++ b/package.json
@@ -67,7 +67,12 @@
     "@storybook/addon-links": "^10.0.2",
     "@storybook/react": "^10.0.2",
     "@storybook/react-webpack5": "^10.0.2",
+    "@storybook/test": "^8.6.14",
     "@testing-library/cypress": "^8.0.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -87,6 +92,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "10.0.2",
     "husky": "^8.0.3",
+    "playwright": "^1.56.1",
+    "playwright-core": "^1.56.1",
     "pnpm": "^7.25.0",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
