--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,7 @@
 name: Build documentation and deploy to GitHub Pages
 on:
   push:
-    branches: ['master']
+    branches: ['main']
   workflow_dispatch:
 
 # Cancel previous run (see: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#concurrency)
