--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "size": "size-limit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build --quiet",
+    "chromatic": "chromatic --exit-zero-on-changes",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "demo:dev": "pnpm --filter demo run dev",
@@ -81,6 +82,7 @@
     "@welldone-software/why-did-you-render": "^7.0.1",
     "all-contributors-cli": "^6.24.0",
     "babel-loader": "^10.0.0",
+    "chromatic": "^13.3.3",
     "cypress": "6.9.1",
     "eslint": "^8.32.0",
     "eslint-config-react-app": "^7.0.1",
