--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "@react-three/drei": "^8.8.3",
     "@react-three/fiber": "^7.0.26",
     "@stitches/react": "1.2.8",
-    "@use-gesture/react": "^10.0.0",
+    "@use-gesture/react": "10.3.1",
     "leva": "workspace:*",
     "noisejs": "^2.1.0",
     "react": "^18.0.0",
