--- a/packages/plugin-dates/package.json
+++ b/packages/plugin-dates/package.json
@@ -12,7 +12,7 @@
   },
   "bugs": "https://github.com/pmndrs/leva/issues",
   "peerDependencies": {
-    "@use-gesture/react": "^10.0.0",
+    "@use-gesture/react": "^10.3.1",
     "leva": ">=0.10.1",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^7.0.0",
-    "@use-gesture/react": "^10.0.0",
+    "@use-gesture/react": "10.3.1",
     "leva": "workspace:*"
   }
 }
