--- a/demo/src/sandboxes/leva-ui/package.json
+++ b/demo/src/sandboxes/leva-ui/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.0.0",
     "react-dropzone": "11.3.1",
     "react-scripts": "4.0.3",
-    "@use-gesture/react": "10.3.1"
+    "@use-gesture/react": "catalog:"
   },
   "scripts": {
     "start": "react-scripts start",
